--- a/src/App.css
+++ b/src/App.css
@@ -7,6 +7,10 @@
   font-family: "Poppins", sans-serif;
 }
 
+body {
+  background-color: #fafafa59;
+}
+
 h1 {
   font-size: 2.5rem;
 }
@@ -36,7 +40,7 @@ p {
     font-size: 1.8rem;
   }
   h2 {
-    font-size: 1.6rem;
+    font-size: 1.4rem;
   }
   p {
     font-size: 0.9rem;
@@ -46,7 +50,7 @@ p {
 button {
   border: none;
   padding: 0.5rem;
-  margin: 0.5rem ;
+  margin: 0.5rem;
   margin-left: 0;
   color: white;
   background-color: brown;
